--- a/.github/workflows/space-shooter.yml
+++ b/.github/workflows/space-shooter.yml
@@ -14,6 +14,6 @@ jobs:
        run: mkdir -p assets
      - uses: czl9707/gh-space-shooter@v1
        with:
-         github-token: ${{ secrets.GITHUB_TOKEN }}
+         github-token: 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
          output-path: assets/space-shooter.gif
          strategy: rando
